feat: dynamic entrypoint, optimize server.properties